# lance

./: .bumpversion.toml  404.html  AGENTS.md  Cargo.toml  index.html  sitemap.xml
.github/workflows/: dev-artifacts.yml  retarget-active-release.yml
ci/: release_common.sh  retarget_active_release.sh  set_dev_build_version.py  test_retarget_active_release.sh  test_set_dev_build_version.py
community/: index.html
community/communication/: index.html
community/contributing/: index.html
community/maintainers/: index.html
community/pmc/: index.html
community/project-specific/: index.html
community/release/: index.html
community/voting/: index.html
format/: index.html
format/AGENTS/: index.html
format/catalog/: index.html
format/file/: index.html
format/index/: index.html
format/namespace/: index.html
format/table/: index.html
guide/arrays/: index.html
guide/blob/: index.html
guide/data_evolution/: index.html
guide/data_types/: index.html
guide/distributed_indexing/: index.html
guide/distributed_write/: index.html
guide/json/: index.html
guide/migration/: index.html
guide/object_store/: index.html
guide/performance/: index.html
guide/read_and_write/: index.html
guide/tags_and_branches/: index.html
guide/tokenizer/: index.html
integrations/datafusion/: index.html
java/: pom.xml
protos/: ann_ivf.proto  table.proto  transaction.proto
python/: Cargo.toml  DEVELOPMENT.md
quickstart/: index.html
rust/lance-cuvs/: Cargo.toml
rust/lance-cuvs/src/: lib.rs
sdk_docs/: index.html
search/: search_index.json
(+294 files in other folders)
